--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -3369,6 +3369,85 @@ a.ico_folder::after {
     border-radius: 50%;
 }
 
+/* 에러페이지 */
+.error_page {
+    height: 100vh;
+    background-color: #dcfaf1;
+}
+.error_page .top {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: calc(100vh - 365px);
+}
+.error_page .top .tit {
+    width: 100%;
+    height: 106px;
+    background: url(../images/content/error_tit.png) no-repeat center;
+    text-indent: -9999px;
+}
+.error_page .top .content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 35px;
+    margin-top: 65px;
+    padding: 0 20px;
+    box-sizing: border-box;
+}
+.error_page .top .content .left p {
+    width: 650px;
+    word-break: keep-all;
+    font-size: 24px;
+    font-weight: 500;
+}
+.error_page .bottom {
+    height: 365px;
+    padding-top: 90px;
+    box-sizing: border-box;
+    background-color: #c5e0d9;
+}
+.error_page .bottom .inp_group {
+    width: 50%;
+    margin: 0 auto;
+    gap: 20px;
+}
+.error_page .bottom .inp_group .inp_box {
+    width: calc(100% - 125px);
+}
+.error_page .bottom .inp_group .inp_box * {
+    height: 58px;
+    font-size: 17px;
+}
+.error_page .bottom .inp_group .btn_box {
+    height: 58px;
+}
+.error_page .bottom .inp_group .btn_box * {
+    align-items: center;
+    background-color: #333;
+    font-size: 24px;
+    font-weight: 500;
+}
+.error_page .bottom > .btn_box {
+    justify-content: center;
+    width: 50%;
+    margin: 60px auto 0;
+    gap: 40px;
+}
+.error_page .bottom > .btn_box * {
+    flex: 1;
+    width: auto;
+    padding: 35px 0;
+    font-size: 24px;
+    font-weight: 600;
+}
+.error_page .bottom > .btn_box *:nth-child(1) {
+    background-color: #6a6193;
+}
+.error_page .bottom > .btn_box *:nth-child(2) {
+    background-color: #c36152;
+}
+
 /* quick menu */
 .quick_box {
     display: flex;
@@ -3930,6 +4009,11 @@ footer .footer_bottom {
 @media screen and (max-width: 1200px) {
     header .header_bottom .btn_bottom {
         flex-direction: column;
+    }
+}
+@media screen and (max-width: 1280px) {
+    .error_page .top .content .left p {
+        width: 100%;
     }
 }
 
@@ -5324,6 +5408,68 @@ footer .footer_bottom {
         width: 3px;
         height: 3px;
         margin-right: 5px;
+    }
+
+    /* 에러페이지 */
+    .error_page .top {
+        height: calc(100vh - 35%);
+    }
+    .error_page .top .tit {
+        background-size: 200px auto;
+        height: 50px;
+    }
+    .error_page .top .content {
+        flex-direction: column-reverse;
+        margin-top: 15px;
+        gap: 15px;
+    }
+    .error_page .top .content .right {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    .error_page .top .content .right img {
+        width: 200px;
+    }
+    .error_page .top .content .left p {
+        text-align: center;
+        font-size: 14px;
+    }
+    .error_page .top .content .left p br {
+        display: none;
+    }
+    .error_page .bottom {
+        height: 35%;
+        padding-top: 10%;
+    }
+    .error_page .bottom .inp_group {
+        width: 100%;
+        padding: 0 20px;
+        box-sizing: border-box;
+        gap: 10px;
+    }
+    .error_page .bottom .inp_group .inp_box {
+        width: calc(100% - 75px);
+    }
+    .error_page .bottom .inp_group .inp_box * {
+        height: 40px;
+    }
+    .error_page .bottom .inp_group .btn_box {
+        height: 40px;
+    }
+    .error_page .bottom .inp_group .btn_box * {
+        font-size: 16px;
+    }
+    .error_page .bottom > .btn_box {
+        width: 100%;
+        padding: 0 20px;
+        box-sizing: border-box;
+        margin-top: 10%;
+        gap: 15px;
+    }
+    .error_page .bottom > .btn_box * {
+        padding: 10px 0;
+        font-size: 16px;
     }
 
     /* 팝업 */
