--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -1010,6 +1010,164 @@ a.ico_folder::after {
     color: #273377;
 }
 
+/* VC구주유통망 */
+.transaction_procedure_box {
+    margin: 100px 0 50px;
+}
+.transaction_procedure_box ul {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 60px;
+
+}
+.transaction_procedure_box ul li {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+}
+.transaction_procedure_box ul li span {
+    display: flex;
+    position: relative;
+    width: 155px;
+    height: 155px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    box-sizing: border-box;
+    padding: 10px;
+    margin-bottom: 30px;
+    word-break: keep-all;
+    text-align: center;
+    font-size: 21px;
+    font-weight: 500;
+    color: #fff;
+}
+.transaction_procedure_box ul li span::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -33px;
+    left: 50%;
+    width: 1px;
+    height: 30px;
+    background-color: #ddd;
+    transform: translateX(-50%);
+}
+.transaction_procedure_box ul li:nth-child(odd) span {
+    background-color: #3795f4;
+    border: 3px solid #c7defb;
+}
+.transaction_procedure_box ul li:nth-child(even) span {
+    background-color: #697ad7;
+    border: 3px solid #bdc6fc;
+}
+.transaction_procedure_box ul li em {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 240px;
+    height: 80px;
+    padding: 0 25px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    border: 3px solid #ddd;
+    word-break: keep-all;
+    text-align: center;
+    font-weight: 400;
+    font-style: normal;
+}
+.transaction_procedure_box ul li:nth-child(1) .txt {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: -65px;
+    right: -183px;
+    background: url(../images/content/bg_transaction_procedure_box_txt.png) no-repeat center 10px;
+    width: 304px;
+    height: 64px;
+    font-size: 20px;
+    font-weight: 500;
+    color: #333399;
+}
+.vc_faq {
+    padding: 0 30px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    border: 1px solid #d9e1e7;
+    box-shadow: 2px 2px 6px 0px rgb(0 0 0 / 5%);
+}
+.vc_faq dl {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 30px 0;
+    box-sizing: border-box;
+    border-bottom: 1px solid #d9e1e7;
+}
+.vc_faq dl:last-child {
+    border-bottom: none;
+}
+.vc_faq dl dt,
+.vc_faq dl dd {
+    display: flex;
+    position: relative;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-left: 45px;
+    font-size: 18px;
+    gap: 10px;
+}
+.vc_faq dl dt {
+    font-weight: 500;
+}
+.vc_faq dl dt::before {
+    content: "Q";
+    display: flex;
+    position: absolute;
+    top: -4px;
+    left: 0;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    background-color: #7986cb;
+    border-radius: 50%;
+    font-size: 22px;
+    font-weight: 500;
+    color: #fff;
+}
+.vc_faq dl dd::before {
+    content: "A";
+    display: flex;
+    position: absolute;
+    top: -4px;
+    left: 0;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    background-color: #00b0ff;
+    border-radius: 50%;
+    font-size: 22px;
+    font-weight: 500;
+    color: #fff;
+}
+
+/* M&A 거래정보망 */
+.list_item .mna_box {
+    display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+}
+.list_item .mna_box dt {
+    font-size: 20px;
+    font-weight: 600;
+}
+.list_item .mna_box dd .font_blue {
+    color: #333399;
+}
+
 /* 벤처투자상담 */
 .answer_box {
     display: flex;
@@ -3369,6 +3527,100 @@ a.ico_folder::after {
     border-radius: 50%;
 }
 
+/* 개인정보처리방침 */
+.txt_content_box {
+    padding: 50px 40px;
+    background-color: #fafafa;
+}
+.txt_content_box .txt_right {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 30px;
+    font-weight: 400;
+}
+.txt_content_box p {
+    font-weight: 400;
+}
+
+/* 서비스 이용약관 */
+.txt_item > dt {
+    margin-bottom: 25px;
+    font-size: 30px;
+    font-weight: 600;
+    color: #5158bd;
+}
+.txt_item > dd {
+    padding: 0 10px;
+    box-sizing: border-box;
+}
+.txt_item > dd dl + dl {
+    margin-top: 20px;
+}
+.txt_item > dd dt {
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: 600;
+}
+.txt_item > dd dd {
+    margin-bottom: 5px;
+    font-weight: 400;
+}
+.txt_item + .txt_item {
+    margin-top: 40px;
+}
+
+/* 이메일무단수집거부 */
+p + .txt_list {
+    margin-top: 30px;
+}
+.txt_list dt {
+    font-weight: 600;
+}
+.txt_list dd {
+    margin-top: 10px;
+}
+.txt_list dd ol {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.txt_list dd ol li {
+    display: flex;
+    position: relative;
+    padding-left: 30px;
+}
+.txt_list dd ol li::before {
+    content: "";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 1px;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    background-color: #333;
+    border-radius: 50%;
+    margin-right: 10px;
+    font-size: 12px;
+    font-weight: 500;
+    color: #fff;
+}
+.txt_list dd ol li:nth-child(1)::before {content: "1";}
+.txt_list dd ol li:nth-child(2)::before {content: "2";}
+.txt_list dd ol li:nth-child(3)::before {content: "3";}
+.txt_list dd ol li:nth-child(4)::before {content: "4";}
+.txt_list dd ol li:nth-child(5)::before {content: "5";}
+.txt_list dd ol li:nth-child(6)::before {content: "6";}
+.txt_list dd ol li:nth-child(7)::before {content: "7";}
+.txt_list dd ol li:nth-child(8)::before {content: "8";}
+.txt_list dd ol li:nth-child(9)::before {content: "9";}
+.txt_list dd ol li:nth-child(10)::before {content: "10";}
+.txt_list dd ol li:nth-child(11)::before {content: "11";}
+.txt_list dd ol li:nth-child(12)::before {content: "12";}
+.txt_list dd ol li:nth-child(13)::before {content: "13";}
+.txt_list dd ol li:nth-child(14)::before {content: "14";}
+
 /* 에러페이지 */
 .error_page {
     height: 100vh;
@@ -4521,6 +4773,63 @@ footer .footer_bottom {
         font-size: 16px;
     }
 
+    /* VC구주유통망 */
+    .transaction_procedure_box {
+        margin: 60px 0 0;
+    }
+    .transaction_procedure_box ul {
+        justify-content: space-between;
+        gap: 10px;
+    }
+    .transaction_procedure_box ul li span {
+        width: 100px;
+        height: 100px;
+        margin-bottom: 10px;
+        font-size: 15px;
+    }
+    .transaction_procedure_box ul li span::after {
+        bottom: -13px;
+        height: 10px;
+    }
+    .transaction_procedure_box ul li em {
+        width: 150px;
+        padding: 0 10px;
+        font-size: 15px;
+    }
+    .transaction_procedure_box ul li:nth-child(1) .txt {
+        background-size: 100% auto; 
+        top: -42px;
+        right: -97px;
+        width: 175px;
+        height: 40px;
+        font-size: 13px;
+    }
+    .vc_faq {
+        padding: 0 15px;
+    }
+    .vc_faq dl {
+        padding: 15px 0;
+    }
+    .vc_faq dl dt,
+    .vc_faq dl dd {
+        padding-left: 30px;
+        word-break: keep-all;
+        font-size: 15px;
+    }
+    .vc_faq dl dt::before,
+    .vc_faq dl dd::before {
+        top: -2px;
+        width: 23px;
+        height: 23px;
+        font-size: 15px;
+    }
+
+    /* M&A 거래정보망 */
+    .list_item .mna_box {
+        padding: 0;
+        flex-direction: column;
+    }
+
     /* 용어사전 */
     .dictionary_box {
         padding: 0;
@@ -5408,6 +5717,41 @@ footer .footer_bottom {
         width: 3px;
         height: 3px;
         margin-right: 5px;
+    }
+
+    /* 개인정보처리방침 */
+    .txt_content_box {
+        padding: 15px;
+    }
+    .txt_content_box .txt_right {
+        margin-bottom: 15px;
+        font-size: 14px;
+    }
+    .txt_content_box p {
+        font-size: 14px;
+    }
+
+    /* 이메일무단수집거부 */
+    .txt_list dd ol li::before {
+        width: 15px;
+        height: 15px;
+        font-size: 11px;
+    }
+    .txt_list dd ol li {
+        padding-left: 20px;
+        font-size: 14px;
+    }
+
+    /* 서비스 이용약관 */
+    .txt_item > dt {
+        margin-bottom: 15px;
+        font-size: 17px;
+    }
+    .txt_item > dd dt {
+        font-size: 16px;
+    }
+    .txt_item > dd dd {
+        font-size: 14px;
     }
 
     /* 에러페이지 */
