--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -994,6 +994,13 @@
 .inp_group.period_chk .chk_box span {
     width: auto;
 }
+.inp_group.inp_txt {
+    display: flex;
+    flex-wrap: nowrap;
+}
+.inp_group.inp_txt .inp_box {
+    width: 100px;
+}
 
 .image_file_box ul {
     display: flex;
@@ -3109,6 +3116,9 @@ a.ui-button:active,
     }
     .inp_group.period_chk .period {
         width: 100%;
+    }
+    .inp_group.inp_txt {
+        justify-content: center;
     }
 
     /* 테이블 */
