--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -897,7 +897,7 @@ a.ico_folder::after {
 }
 .btn_mart_notice .notice_box {
     padding: 20px 0;
-    margin-top: 30px;
+    margin: 30px 0;
     box-sizing: border-box;
     width: 595px;
     border: 3px solid #103ab3;
