--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -3690,21 +3690,22 @@ p + .txt_list {
     width: 100%;
     height: 106px;
     background: url(../images/content/error_tit.png) no-repeat center;
+    background-size: auto 80px;
     text-indent: -9999px;
+    margin-bottom: 2%;
 }
 .error_page .top .content {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 35px;
-    margin-top: 65px;
     padding: 0 20px;
     box-sizing: border-box;
 }
 .error_page .top .content .left p {
-    width: 650px;
+    width: 565px;
     word-break: keep-all;
-    font-size: 24px;
+    font-size: 21px;
     font-weight: 500;
 }
 .error_page .bottom {
@@ -5897,7 +5898,7 @@ footer .footer_bottom {
     }
     .error_page .bottom > .btn_box * {
         padding: 10px 0;
-        font-size: 16px;
+        font-size: 15px;
     }
 
     /* 팝업 */
